--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -26,5 +26,7 @@
         <item name="actionBarTheme">@color/white</item>
         <item name="android:statusBarColor">@color/PrimaryColor</item>
         <item name="colorPrimary">@color/PrimaryColor</item>
+        <item name="titleTextColor">@color/white</item>
+        <item name="android:textColor">@color/white</item>
     </style>
 </resources>
