--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -71,193 +71,137 @@
         </com.google.android.material.card.MaterialCardView>
 
         <com.google.android.material.card.MaterialCardView
-            android:id="@+id/cv_status_covid"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="20dp"
-            android:layout_marginEnd="20dp"
             android:layout_marginTop="20dp"
-            app:cardCornerRadius="20dp"
-            app:cardElevation="3dp"
-            app:layout_constraintTop_toBottomOf="@id/cv_banner"
-            app:cardBackgroundColor="@color/cardview_light_background">
+            app:cardCornerRadius="15dp"
+            android:id="@+id/cv_status_covid"
+            android:layout_width="370dp"
+            android:layout_height="wrap_content"
+            app:layout_constraintStart_toStartOf="@id/cv_banner"
+            app:layout_constraintEnd_toEndOf="@id/cv_banner"
+            app:layout_constraintTop_toBottomOf="@id/cv_banner">
 
             <androidx.constraintlayout.widget.ConstraintLayout
-                android:layout_width="359dp"
-                android:layout_height="wrap_content">
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="20dp"
+                android:background="@color/cardview_light_background">
+
+                <ImageView
+                    android:id="@+id/img_flag"
+                    android:layout_width="45dp"
+                    android:layout_height="45dp"
+                    android:src="@drawable/indoflag"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Indonesia"
+                    app:layout_constraintStart_toEndOf="@id/img_flag"
+                    app:layout_constraintTop_toTopOf="@id/img_flag"
+                    app:layout_constraintBottom_toBottomOf="@id/img_flag"
+                    android:textColor="@color/black"
+                    android:fontFamily="@font/poppins_semibold"
+                    android:layout_marginStart="12dp"
+                    android:textSize="12sp" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="16 Desember 2005"
+                    android:textColor="@color/black"
+                    android:textSize="9sp"
+                    android:fontFamily="@font/poppins_medium"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
 
                 <View
+                    android:id="@+id/view_line"
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
-                    android:layout_marginTop="3dp"
-                    android:layout_marginStart="25dp"
-                    android:layout_marginEnd="25dp"
+                    android:layout_marginTop="16dp"
                     android:background="@android:color/black"
-                    app:layout_constraintTop_toBottomOf="@id/cv_info_flag" />
+                    app:layout_constraintTop_toBottomOf="@id/img_flag" />
 
-                <com.google.android.material.card.MaterialCardView
-                    android:id="@+id/cv_info_flag"
-                    android:layout_width="match_parent"
-                    android:layout_height="60dp"
-                    android:layout_margin="15dp"
-                    app:cardElevation="0dp"
-                    tools:ignore="MissingConstraints">
-
-
-                    <androidx.constraintlayout.widget.ConstraintLayout
-                        android:layout_marginTop="7dp"
-                        android:layout_width="335dp"
-                        android:layout_height="wrap_content">
-
-                        <ImageView
-                            android:id="@+id/imageView2"
-                            android:layout_width="45dp"
-                            android:layout_height="45dp"
-                            android:layout_margin="10dp"
-                            android:src="@drawable/indoflag"
-                            android:elevation="1dp"
-                            app:layout_constraintBottom_toBottomOf="parent"
-                            app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintTop_toTopOf="parent" />
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginStart="1dp"
-                            android:layout_marginBottom="5dp"
-                            android:text="Indonesia"
-                            android:textColor="@color/black"
-                            android:textSize="12sp"
-                            android:fontFamily="@font/poppins_bold"
-                            app:layout_constraintBottom_toBottomOf="parent"
-                            app:layout_constraintStart_toEndOf="@+id/imageView2"
-                            app:layout_constraintTop_toTopOf="parent" />
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginStart="10dp"
-                            android:layout_marginEnd="20dp"
-                            android:text="16 Desember 2005"
-                            android:textColor="@color/black"
-                            android:textSize="9sp"
-                            android:textStyle="normal"
-                            android:fontFamily="@font/poppins_medium"
-                            app:layout_constraintBottom_toBottomOf="parent"
-                            app:layout_constraintEnd_toEndOf="parent"
-                            app:layout_constraintTop_toTopOf="parent" />
-
-                    </androidx.constraintlayout.widget.ConstraintLayout>
-
-
-                </com.google.android.material.card.MaterialCardView>
-
-                <com.google.android.material.card.MaterialCardView
-                    android:id="@+id/materialCardView5"
-                    android:layout_width="100dp"
-                    android:layout_height="65dp"
-                    android:layout_margin="10dp"
-                    app:cardCornerRadius="20dp"
-                    app:cardElevation="0dp"
-                    app:layout_constraintEnd_toStartOf="@+id/materialCardView4"
-                    app:layout_constraintHorizontal_chainStyle="spread"
+                <TextView
+                    android:id="@+id/tv_infected"
+                    app:layout_constraintTop_toBottomOf="@id/view_line"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/cv_info_flag">
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="20dp"
+                    android:gravity="center"
+                    android:fontFamily="@font/poppins_semibold"
+                    android:text="Infected"
+                    android:textColor="@color/black"
+                    android:textSize="14sp" />
 
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center|bottom"
-                        android:layout_marginBottom="35dp"
-                        android:gravity="center"
-                        android:fontFamily="@font/poppins_bold"
-                        android:text="Infected"
-                        android:textColor="@color/black"
-                        android:textSize="12sp" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="6dp"
+                    app:layout_constraintTop_toBottomOf="@id/tv_infected"
+                    app:layout_constraintStart_toStartOf="@id/tv_infected"
+                    app:layout_constraintEnd_toEndOf="@id/tv_infected"
+                    android:text="1.675"
+                    android:fontFamily="@font/poppins_medium"
+                    android:textColor="@color/black"
+                    android:textSize="11sp" />
 
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center|bottom"
-                        android:layout_marginBottom="15dp"
-                        android:gravity="center"
-                        android:text="1.675"
-                        android:fontFamily="@font/poppins_medium"
-                        android:textColor="@color/black"
-                        android:textSize="11sp"
-                        android:textStyle="normal" />
-
-                </com.google.android.material.card.MaterialCardView>
-
-                <com.google.android.material.card.MaterialCardView
-                    android:id="@+id/materialCardView4"
-                    android:layout_width="100dp"
-                    android:layout_height="65dp"
-                    android:layout_margin="10dp"
-                    app:cardCornerRadius="20dp"
-                    app:cardElevation="0dp"
-                    app:layout_constraintEnd_toStartOf="@+id/materialCardView6"
-                    app:layout_constraintStart_toEndOf="@+id/materialCardView5"
-                    app:layout_constraintTop_toBottomOf="@id/cv_info_flag">
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center|bottom"
-                        android:layout_marginBottom="35dp"
-                        android:gravity="center"
-                        android:text="Healed"
-                        android:textColor="@color/black"
-                        android:textSize="12sp"
-                        android:fontFamily="@font/poppins_bold" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center|bottom"
-                        android:layout_marginBottom="15dp"
-                        android:gravity="center"
-                        android:text="4.281.019"
-                        android:textColor="@color/black"
-                        android:textSize="11sp"
-                        android:fontFamily="@font/poppins_medium" />
-
-                </com.google.android.material.card.MaterialCardView>
-
-                <com.google.android.material.card.MaterialCardView
-                    android:id="@+id/materialCardView6"
-                    android:layout_width="100dp"
-                    android:layout_height="65dp"
-                    android:layout_margin="10dp"
-                    app:cardCornerRadius="20dp"
-                    app:cardElevation="0dp"
+                <TextView
+                    android:id="@+id/tv_healed"
+                    app:layout_constraintTop_toBottomOf="@id/view_line"
+                    app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toEndOf="@+id/materialCardView4"
-                    app:layout_constraintTop_toBottomOf="@id/cv_info_flag">
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center|bottom"
+                    android:layout_marginTop="20dp"
+                    android:gravity="center"
+                    android:fontFamily="@font/poppins_semibold"
+                    android:text="Infected"
+                    android:textColor="@color/black"
+                    android:textSize="14sp" />
 
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center|bottom"
-                        android:layout_marginBottom="35dp"
-                        android:gravity="center"
-                        android:text="Death"
-                        android:textColor="@color/black"
-                        android:textSize="12sp"
-                        android:fontFamily="@font/poppins_bold" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="6dp"
+                    app:layout_constraintTop_toBottomOf="@id/tv_healed"
+                    app:layout_constraintStart_toStartOf="@id/tv_healed"
+                    app:layout_constraintEnd_toEndOf="@id/tv_healed"
+                    android:text="4.525.124"
+                    android:fontFamily="@font/poppins_medium"
+                    android:textColor="@color/black"
+                    android:textSize="11sp" />
 
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center|bottom"
-                        android:layout_marginBottom="15dp"
-                        android:gravity="center"
-                        android:text="142.114"
-                        android:textColor="@color/black"
-                        android:textSize="11sp"
-                        android:fontFamily="@font/poppins_medium" />
+                <TextView
+                    android:id="@+id/tv_death"
+                    app:layout_constraintTop_toBottomOf="@id/view_line"
+                    android:layout_width="wrap_content"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="20dp"
+                    android:gravity="center"
+                    android:fontFamily="@font/poppins_semibold"
+                    android:text="Infected"
+                    android:textColor="@color/black"
+                    android:textSize="14sp" />
 
-                </com.google.android.material.card.MaterialCardView>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="6dp"
+                    app:layout_constraintTop_toBottomOf="@id/tv_death"
+                    app:layout_constraintStart_toStartOf="@id/tv_death"
+                    app:layout_constraintEnd_toEndOf="@id/tv_death"
+                    android:text="142.103"
+                    android:fontFamily="@font/poppins_medium"
+                    android:textColor="@color/black"
+                    android:textSize="11sp" />
+
+
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
