--- a/app/src/main/res/values-v23/themes.xml
+++ b/app/src/main/res/values-v23/themes.xml
@@ -7,4 +7,13 @@
         <item name="android:statusBarColor">@color/white</item>
         <item name="colorPrimary">@color/PrimaryColor</item>
     </style>
+
+    <style name="DetailActivity" parent="Theme.MaterialComponents.Light">
+        <item name="android:windowLightStatusBar">false</item>
+        <item name="actionBarTheme">@color/white</item>
+        <item name="android:statusBarColor">@color/PrimaryColor</item>
+        <item name="colorPrimary">@color/PrimaryColor</item>
+        <item name="titleTextColor">@color/white</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
 </resources>
