--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,17 +1,19 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.UrHealth" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.UrHealth" parent="Theme.MaterialComponents.Light">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/PrimaryColor</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
+        <item name="colorPrimaryVariant">@color/white</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/SecondaryColor</item>
         <item name="colorSecondaryVariant">@color/teal_700</item>
-        <item name="colorOnSecondary">@color/black</item>
+        <item name="colorOnSecondary">@color/white</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">@color/white</item>
         <item name="android:windowLightStatusBar" tools:targetApi="m">true</item>
+        <item name="titleTextColor">@color/white</item>
+        <item name="android:textColor">@color/White</item>
         <!-- Customize your theme here. -->
     </style>
     
@@ -22,11 +24,23 @@
 
     </style>
 
-    <style name="DetailActivity" parent="Theme.MaterialComponents.Light">
-        <item name="actionBarTheme">@color/white</item>
-        <item name="android:statusBarColor">@color/PrimaryColor</item>
-        <item name="colorPrimary">@color/PrimaryColor</item>
-        <item name="titleTextColor">@color/white</item>
+    <style name="DetailActivity" parent="@android:style/Theme.Holo.Light">
+        <item name="actionBarStyle">@style/MyTheme.ActionBarStyle</item>
+    </style>
+
+    <style name="MyTheme.ActionBarStyle" parent="@android:style/Widget.Holo.Light.ActionBar">
+        <item name="android:titleTextStyle">@style/MyTheme.ActionBar.TitleTextStyle</item>
+    </style>
+
+    <style name="MyTheme.ActionBar.TitleTextStyle" parent="@android:style/TextAppearance.Holo.Widget.ActionBar.Title">
         <item name="android:textColor">@color/white</item>
+    </style>
+
+    <style name="DemoTheme" parent="ThemeOverlay.MaterialComponents.Light">
+        <!-- Customize your theme here. -->
+        <item name="colorPrimary">@color/PrimaryColor</item>
+
+        <item name="colorPrimaryDark">@color/PrimaryColor</item>
+        <item name="colorAccent">@color/white</item>
     </style>
 </resources>
